--- a/first.html
+++ b/first.html
@@ -2,7 +2,8 @@
 <html lang=“en-us”>
 
 <head> 
-    <meta charset=“UTF-8" >
+    <meta charset="utf-8">
+
     <title>Hello World</title>
 </head>
 
@@ -13,4 +14,17 @@
     <h2>
         sdfsdfsdfsdf
     </h2>
+    <ul>
+    		<li>Glazed</li>
+    		<li>sprinkles</li>
+    		<li>Chocolate</li>	
+	</ul>
+
+	
+	<ul>
+			<li>Blue</li>
+			<li>Red</li>
+			<li>Purple</li>
+			
 </body>
+</html>
