--- a/Basic Portfolio/index.html
+++ b/Basic Portfolio/index.html
@@ -13,28 +13,15 @@
 </head>
 
 <body>
-
+	<div>
 	<h1 id="name">Alex Miller</h1>
-	
-
     <ul class="APC1">
-    	<li>
-    		<a href="index.html">
-    			About
-    	
-			</a>
-    	</li>
-    	<li>	
-    		<a href="portfolio.html">
-    			Portfolio
-    		</a>
-    	</li>
-    	<li>	
-    		<a href="contact.html">
-    			Contact
-    		</a>
-    	</li>	
+    	<li> <a href="index.html"> About </a> </li>
+    	<li> <a href="portfolio.html"> Portfolio </a> </li>
+    	<li> <a href="contact.html"> Contact </a> </li>
 	</ul>
+	</div>
+
 
 	<div>
 
@@ -44,11 +31,12 @@
 
 				<br><br>
 
-				<h2 id="aboutme">
+				<h1 id="aboutme">
 				About Me
 				<hr>
-				</h2>
-			
+				</h1>
+				
+
 				<img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/18485620_10211419772722465_4651911094696594600_n.jpg?oh=0f82f0b2fe0cb0f5848378b3b8b0b68c&oe=5AAEA6C7" width="200" height="300" id="img">
 
 				<p id="p1">
@@ -84,4 +72,10 @@
 			</div>
 		</section>
 		
+		<div class="footer">
+			<p id="foottop">Copyright 2017 Alex Miller</p>
+			<p>
+				Copyright 2017 Alex Miller
+			</p>
+		</div>
 		
