--- a/Basic Portfolio/contact.html
+++ b/Basic Portfolio/contact.html
@@ -41,9 +41,9 @@
 			<div id="pg2text">
 				<br>
 
-				<h2>
+				<h1 id="contact">
 				Contact
-				</h2>
+				</h1>
 
 				<hr>
 
@@ -69,9 +69,13 @@
 				<form>
   				Message
 				<br>
-  				 <input type="text" name="fname" size="100" height="500px"><br>
+  				 <input type="text" name="fname" size="100" height="500px" id="input1"><br>
 
   				</form>
+
+  				<h2 id="submit">
+  					Submit
+  				</h2>
 			
 			</div>
 
@@ -102,4 +106,10 @@
 			
 
 		</section>
+		<div class="footer">
+			<p id="foottop">Copyright 2017 Alex Miller</p>
+			<p>
+				Copyright 2017 Alex Miller
+			</p>
+		</div>
 </body>
