--- a/first.html
+++ b/first.html
@@ -15,7 +15,7 @@
         sdfsdfsdfsdf
     </h2>
     <ul>
-    		<li>Glazed</li>
+    		<li class="red">Glazed</li>
     		<li>sprinkles</li>
     		<li>Chocolate</li>	
 	</ul>
@@ -25,6 +25,13 @@
 			<li>Blue</li>
 			<li>Red</li>
 			<li>Purple</li>
-			
+	</ul>
+
+	<style type="text/css">
+	.red{
+		color: red;
+	}
+
+	</style>
 </body>
 </html>
